--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Exo+2);
+@import url(https://fonts.googleapis.com/css?family=Exo+2);
 
 body {
     background-color: #D0D0D0;
