--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
     background-color: #D0D0D0;
 	font-family: "Exo 2";
 	text-align: center;
-	margin-top: 40px;
+	margin-top: 50px;
 }
 
 h1 {
-	font-size: 10em;
+	font-size: 10vw;
 }
 
 h2 {
@@ -20,9 +20,17 @@ p {
 }
 
 .page {
-    height:100vh;
-    padding-top: 50px;
-	margin-top: -50px;
+    min-height:100vh;
+    padding-top: 40px;
+	/*margin-top: -50px;*/
+}
+
+.page1 {
+	background-color: white; 
+}
+
+.page2 {
+	background-color: #978897;
 }
 
 i {
@@ -42,11 +50,29 @@ li > a{
 	font-size:1.25em;
 }
 
-ul.nav a:hover {
+ul.nav a {
+	color: white !important;
+}
+
+ul.nav li.active {
+	color: #D0D0D0;
+}
+
+ul.nav li.active a {
 	color: black !important;
 }
 
+ul.nav a:hover {
+	color: #db5461 !important;
+}
+
 .navbar{
-	background-color: #D0D0D0;
+	background-color: #283044;
 	border: 0px;
 }
+
+.navbar a.navbar-brand {
+	font-size: 1.7em;
+	color: white !important;
+}
+
