--- a/style.scss
+++ b/style.scss
@@ -7,16 +7,16 @@ body {
 	margin-top: 50px;
 }
 
-.jumbotron h1 {
-	font-size: 10vw;
-}
-
-.jumbotron h2 {
-	font-size: 6em;
-}
-
-.jumbotron h3 {
-	font-size: 3em;
+.jumbotron {
+	h1 {
+		font-size: 10vw;
+	}
+	h2 {
+		font-size: 6em;
+	}
+	h3 {
+		font-size: 3em;
+	}
 }
 
 p {
@@ -53,23 +53,20 @@ a > i {
 	margin-right: 10px;
 	margin-left: 10px;
 	color: #333;
-}
-
-a > i:hover {
-	color: #db5461;
+	&:hover {
+		color: #db5461;
+	}
 }
 
 ul.nav {
 	color: #D0D0D0;
-}
-
-ul.nav a {
-	color: white !important;
-	font-size: 1.25em;
-}
-
-ul.nav a:hover {
-	color: #db5461 !important;
+	a {
+		color: white !important;
+		font-size: 1.25em;
+		&:hover {
+			color: #db5461 !important;
+		}
+	}
 }
 
 a.navbar-brand:hover {
@@ -79,9 +76,8 @@ a.navbar-brand:hover {
 .navbar {
 	background-color: #283044;
 	border: 0px;
-}
-
-.navbar a.navbar-brand {
-	font-size: 1.7em;
-	color: white;
+	a.navbar-brand {
+		font-size: 1.7em;
+		color: white;
+	}
 }
