Changed the about page. Added a google form for the mailing list

--- a/style.css
+++ b/style.css
@@ -86,3 +86,12 @@ a.navbar-brand:hover {
 	font-size: 1.7em;
 	color: white;
 }
+
+.mainlist {
+	list-style-type: none;
+}
+
+.mainlist li {
+	font-size: 2em;
+	font-style: italic;
+}
