--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,7 +326,6 @@ button:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -469,11 +468,40 @@ header .intro-text {
   margin-top: 1em;
 }
 /* Sponsors Page */
-.sponsors {
-  justify-content: space-between;
+
+#sponsors {
+  padding: 120px 0 0px 0;
+  position: relative;
   display: flex;
+  flex-direction: column;
+}
+
+#sponsors h2::after {
+  position: absolute;
+  content: "";
+  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  height: 4px;
+  width: 10%;
+  bottom: 0;
+  left: 45%;
+}
+
+.sponsors {
+  justify-content: space-evenly;
+  flex-basis: 33.333333%;
+  display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   margin-bottom: 100px;
+}
+
+.keywords-sponsors {
+  font-size: 36px;
+  font-style: italic;
+}
+
+.sponsors>* {
+  flex: 0 0 200px;
 }
 
 .sponsors div {
@@ -490,7 +518,9 @@ header .intro-text {
   background-color: whitesmoke;
   width: auto;
   margin-bottom: 10%;
-  border-radius: 25px;
+  border-radius: 30px;
+  margin-left: 2em;
+  margin-right: 2em;
   text-align: center;
   word-spacing: 1px;
   display: flexbox;
@@ -501,7 +531,7 @@ header .intro-text {
 .sponsorButtons {
   text-align: center;
   margin-bottom: 5%;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 .btn-sponsors {
@@ -512,7 +542,7 @@ header .intro-text {
   background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
-  margin: 0;
+  margin: 5px;
   font-size: 15px;
   font-weight: 500;
   border-radius: 25px;
@@ -1482,7 +1512,7 @@ label {
 #alumni .card,
 #project .card {
   
-  margin: 6em 2em 2em 2em;
+  margin: 6em 2em 6em 2em;
   width: 220px;
   font-family: sans-serif;
   
@@ -1534,7 +1564,7 @@ label {
 #alumni .social-links {
   position: absolute;
   top: 75px;
-  left: 18px;
+  left: 42px;
 }
 
 #team .social-links a,
@@ -1546,6 +1576,8 @@ label {
   margin-left: 15px;
   font-size: 21px;
 }
+
+
 
 /* Landing */
 
@@ -1617,5 +1649,3 @@ label {
 .custom-shape-divider-bottom-1648670826 .shape-fill {
   fill: #ffffff;
 }
-
-
