--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,6 @@ body {
   overflow: auto;
 }
 
-
 body,
 html {
   font-family: "Open Sans", sans-serif;
@@ -322,19 +321,20 @@ button:focus,
 }
 
 /* Header Section */
+#header {
+  overflow: hidden;
+}
+
 .intro {
+  position: absolute;
+  top: 0;
   display: table;
   width: 100%;
   padding: 0;
-  background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-}
-
-.intro .overlay {
-  background: rgba(0, 0, 0, 0.2);
 }
 
 .intro h1 {
@@ -386,7 +386,8 @@ header .intro-text {
 }
 /* About Section */
 
-#about, #contact-form {
+#about,
+#contact-form {
   padding: 120px 0 100px 0;
   position: relative;
 }
@@ -403,7 +404,8 @@ header .intro-text {
   padding-bottom: 15px;
 }
 
-#about h2::after, #contact-form h2::after {
+#about h2::after,
+#contact-form h2::after {
   position: absolute;
   content: "";
   background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
@@ -425,7 +427,6 @@ header .intro-text {
   font-style: italic;
 }
 
-
 #about .about-text p {
   font-size: 24px;
   line-height: 1.5em;
@@ -436,7 +437,6 @@ header .intro-text {
     display: flex;
     flex-direction: row;
   }
-  
 }
 
 @media (max-width: 991px) {
@@ -444,7 +444,6 @@ header .intro-text {
     display: flex;
     flex-direction: column;
   }
-  
 }
 
 #about .about-text li:before {
@@ -500,7 +499,7 @@ header .intro-text {
   font-style: italic;
 }
 
-.sponsors>* {
+.sponsors > * {
   flex: 0 0 200px;
 }
 
@@ -665,13 +664,13 @@ header .intro-text {
 
 @media (min-width: 1200px) {
   .project-img {
-    position: absolute; 
+    position: absolute;
     filter: grayscale(100%);
     top: 41%;
     left: 40%;
     transform: translateX(0px);
   }
-  
+
   .project-roles img {
     width: 80%;
     opacity: 0.2;
@@ -681,29 +680,28 @@ header .intro-text {
 
 @media (min-width: 992px) and (max-width: 1199px) {
   .project-img {
-    position: absolute; 
+    position: absolute;
     filter: grayscale(100%);
     top: 42%;
     left: 30%;
     transform: translateX(20px);
   }
-  
+
   .project-roles img {
     width: 80%;
     opacity: 0.2;
     border-radius: 20px;
   }
-  
 }
 
 @media (min-width: 675px) and (max-width: 991px) {
   .project-img {
-    position: absolute; 
+    position: absolute;
     filter: grayscale(100%);
     top: 47%;
     left: 40%;
   }
-  
+
   .project-roles img {
     width: 80%;
     height: 375px;
@@ -714,7 +712,7 @@ header .intro-text {
 
 @media (max-width: 674px) {
   .project-img {
-    position: absolute; 
+    position: absolute;
     filter: grayscale(100%);
     top: 40%;
     left: 8%;
@@ -722,7 +720,7 @@ header .intro-text {
     bottom: 47%;
     transform: translateX(5%);
   }
-  
+
   .project-roles img {
     width: 90%;
     height: 550px;
@@ -730,7 +728,6 @@ header .intro-text {
     border-radius: 20px;
   }
 }
-
 
 .project-roles h3 {
   line-height: 1.5em;
@@ -813,7 +810,7 @@ header .intro-text {
     margin-right: auto;
     padding-right: 0em;
   }
-  
+
   .role-card .default {
     height: 0px;
     overflow: hidden;
@@ -826,11 +823,10 @@ header .intro-text {
     border-radius: 45px;
   }
 
-
   .fade-in {
     animation: fade-in 0.25s ease-in-out 0s forwards;
   }
-  
+
   @keyframes fade-in {
     from {
       opacity: 0;
@@ -849,11 +845,11 @@ header .intro-text {
       flex-basis: 70%;
     }
   }
-  
+
   .fade-out {
     animation: fade-out 0.25s ease-in-out 0s forwards;
   }
-  
+
   @keyframes fade-out {
     from {
       height: 100%;
@@ -872,7 +868,6 @@ header .intro-text {
       background-color: white;
     }
   }
-  
 }
 
 @media (min-width: 675px) {
@@ -890,9 +885,8 @@ header .intro-text {
     margin: auto;
     padding: 1em;
     border-radius: 45px;
-    flex-basis: 70%; 
+    flex-basis: 70%;
   }
-
 
   .fade-in {
     animation: fade-in 0.25s ease-in-out 0s forwards;
@@ -908,11 +902,11 @@ header .intro-text {
       background-color: rgba(99, 114, 255, 0.5);
     }
   }
-  
+
   .fade-out {
     animation: fade-out 0.25s ease-in 0s forwards;
   }
-  
+
   @keyframes fade-out {
     from {
       opacity: 1;
@@ -923,7 +917,6 @@ header .intro-text {
       background-color: white;
     }
   }
-  
 }
 
 .container-comm {
@@ -1023,7 +1016,6 @@ header .intro-text {
   margin-bottom: 2em;
 }
 
-
 .events li span::before {
   content: "\f00c";
   font-family: "FontAwesome";
@@ -1121,7 +1113,6 @@ header .intro-text {
 .gradient {
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
 }
-
 
 .gradient > .container {
   padding-bottom: 3em;
@@ -1312,9 +1303,8 @@ header .intro-text {
   to {
     opacity: 1;
   }
-  
 }
- /* #contact .section-title {
+/* #contact .section-title {
   margin-bottom: 40px;
 }
 #contact .section-title p {
@@ -1426,7 +1416,6 @@ label {
   justify-content: space-evenly;
 }
 
-
 #contact .social ul li {
   display: inline-block;
   margin: 0 20px;
@@ -1472,18 +1461,24 @@ label {
 
 /* Team Section */
 
-#team, #alumni, #project {
+#team,
+#alumni,
+#project {
   padding: 120px 0 100px 0;
   position: relative;
   display: flex;
   flex-direction: column;
 }
 
-#team h4, #alumni h4, #project h4 {
+#team h4,
+#alumni h4,
+#project h4 {
   margin: 5px 0;
 }
 
-#team h2::after, #alumni h2::after, #project h2::after {
+#team h2::after,
+#alumni h2::after,
+#project h2::after {
   position: absolute;
   content: "";
   background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
@@ -1491,31 +1486,27 @@ label {
   width: 10%;
   bottom: 0;
   left: 45%;
-
 }
 
 #team .cardrow,
 #alumni .cardrow,
 #project .cardrow {
-   
   flex-direction: row;
   flex-wrap: wrap;
   display: flex;
-  
-  align-items: center; 
+
+  align-items: center;
   justify-content: space-evenly;
   margin: auto;
-  
 }
 
 #team .card,
 #alumni .card,
 #project .card {
-  
   margin: 6em 2em 6em 2em;
   width: 220px;
   font-family: sans-serif;
-  
+
   padding: 20px;
   box-shadow: 0 0 22px #3336;
   border-radius: 16px;
@@ -1576,8 +1567,6 @@ label {
   margin-left: 15px;
   font-size: 21px;
 }
-
-
 
 /* Landing */
 
